--- a/django_rust/templates/index.html
+++ b/django_rust/templates/index.html
@@ -11,17 +11,24 @@
     <body class="h-100">
         {% if server.is_on %}
         
-            <div class="row bg-success h-100 w-100 justify-content-center align-items-center h1 g-0" id="main_div">
+            <div class="row bg-success w-100 justify-content-center align-items-center h1 g-0" id="main_div">
                 SERVER ONLINE!
             </div>
 
         {% else %}
 
-            <div class="row bg-danger h-100 w-100 justify-content-center align-items-center h1 g-0" id="main_div">
+            <div class="row bg-danger w-100 justify-content-center align-items-center h1 g-0" id="main_div">
                 SERVER OFFLINE
             </div>
         
         {% endif %}
+        <div class="col-md-7 col-lg-5 col-xl-4 container text-center h-100">
+            <div id="scrollarea" class="container border mt-3 overflow-auto" style="height: calc(100% - 200px); border-radius: 0.25rem;">
+                <div id="chat" class="row row-cols-1 gy-2 p-3 text-start">
+                    
+                </div>
+            </div>
+        </div>
         <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
         <script src="{% static 'js/reconnecting-websocket.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.5.2.0.b1.bundle.min.js' %}"></script>
