--- a/django_rust/templates/index.html
+++ b/django_rust/templates/index.html
@@ -26,8 +26,8 @@
             </div>
         
         {% endif %}
-
-        <div class="col-md-7 col-lg-5 col-xl-4 container text-center" style="height: calc(100% - 100px);">
+        
+        <div class="container col-md-7 col-lg-5 col-xl-4 text-center" style="height: calc(100% - 150px);">
             <div id="scrollarea" class="container border mt-3 overflow-auto h-100" style="border-radius: 0.25rem;">
                 <div id="chat" class="row row-cols-1 gy-2 p-3 text-start">
                     {% for message in messages %}
@@ -36,15 +36,16 @@
                             var date = new Date("{{ message.create_date|date:"c" }}")
                             dateString = date.getHours() + ":" + String(date.getMinutes()).padStart(2, "0")
                             $('#chat').append(`
-                    <div class="col-12 p-0">
-                        <div class="border" style="min-height: 60px; border-radius: 0.25rem; background-color: var(--bs-gray-100);">
-                            <div class="row justify-content-between">
-                                <font class="w-auto mx-1 text-decoration-none 'text-success'" data-username="{{ message.player.nickname }}"><i>{{ message.player.nickname }}</i></font>
-                                <div class="w-auto mx-1" style="color: var(--bs-gray-600)">${dateString}</div>
-                            </div>
-                            <div class="mx-1 text-break" style="white-space: pre-wrap;">{{message.text}}</div>
-                        </div>
-                    </div>`)
+                                <div class="col-12 p-0">
+                                    <div class="border" style="min-height: 60px; border-radius: 0.25rem; background-color: var(--bs-gray-100);">
+                                        <div class="row justify-content-between">
+                                            <font class="w-auto mx-1 text-decoration-none 'text-success'" data-username="{{ message.player.nickname }}"><i>{{ message.player.nickname }}</i></font>
+                                            <div class="w-auto mx-1" style="color: var(--bs-gray-600)">${dateString}</div>
+                                        </div>
+                                        <div class="mx-1 text-break" style="white-space: pre-wrap;">{{message.text}}</div>
+                                    </div>
+                                </div>
+                            `)
                         </script>
 
                     {% endfor %}
@@ -55,6 +56,9 @@
                     </script>
                 </div>
             </div>
+        </div>
+        <div class="row mt-2 w-100 justify-content-center align-items-center h3 g-0">
+            {{ players|length }}/100 players online
         </div>
     </body>
 </html>
